Login and register

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -96,5 +96,22 @@
         <url-pattern>/shopping-cart/remove</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>LoginServlet</servlet-name>
+        <servlet-class>com.example.CategoryAsm.Controller.LoginServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>LoginServlet</servlet-name>
+        <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+    <filter>
+        <filter-name>adminfilter</filter-name>
+        <filter-class>com.example.CategoryAsm.filterdemo.AdminFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>adminfilter</filter-name>
+        <url-pattern>/admin/*</url-pattern>
+        <url-pattern>/admin/**</url-pattern>
+    </filter-mapping>
 
 </web-app>
